Small bugs fixed; overflow style added

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,10 +1,14 @@
 $light-gray: #939393;
 
+#table-container-front, #table-container-back {
+    overflow: scroll;
+}
+
 table {
     border-collapse: collapse;
     margin: 0.75rem 0;
 }
-td {
+th, td {
     border: 1px solid $light-gray;
     padding: 0.75rem 1.5rem;
 }
